# kann_ai

./: .env.en.example  .env.example  .gitignore  Makefile  README.md  blocklist.py  bluesky_client.py  bot.py  cleanup_blocklist.py  database.py  delete_all_posts.py  mastodon_client.py  package.json  pyproject.toml  scraper.py  seed_fake_data.py  utils.py
deploy/: setup.sh  update.sh
scripts/: regenerate_questions.py
supervisord/: bot.ini  bot_de.ini  bot_en.ini  web.ini  web_de.ini  web_en.ini
web/: app.py  og_image.py
web/locales/: __init__.py  de.py  en.py
web/static/css/: style.css
web/static/js/: main.js
web/templates/: about.html  all_questions.html  base.html  empty.html  home.html  question.html
