[project]
name = "kann-ai-bot"
version = "0.1.0"
description = "WikiHow-basierte KI-Fragen fuer Mastodon und Web"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
    "httpx>=0.28",
    "mastodon.py>=1.8",
    "python-dotenv>=1.0",
    "aiosqlite>=0.20",
    "python-multipart>=0.0.20",
    "pillow>=12.1.1",
    "slowapi>=0.1.9",
    "atproto>=0.0.65",
    "numpy<2",
    "spacy>=3.8.11",
    "de-core-news-sm",
    "en-core-web-sm",
]

[tool.hatch.build.targets.wheel]
packages = ["web"]

[tool.uv.sources]
de-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/de_core_news_sm-3.8.0/de_core_news_sm-3.8.0-py3-none-any.whl" }
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
